Bug 1265806 - Update scrollbar finding code to deal with layer trees on both OS X and Windows properly. r=rbarker

MozReview-Commit-ID: GBC5Y9lLAoL